--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@types/three": "^0.158.2",
+    "ammojs-typed": "github:jeraaaa/ammojs-typed",
+    "postprocessing": "^6.33.3",
     "three": "^0.158.0"
   }
 }
